--- a/styles/home.scss
+++ b/styles/home.scss
@@ -91,3 +91,14 @@ body {
      padding: 0 10px;
      text-decoration: none;
    }
+
+   .userCount {
+     color: inherit;
+    display: block;
+    float: right;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 60px;
+    padding: 0 10px;
+    text-decoration: none;
+   }
