--- a/styles/home.scss
+++ b/styles/home.scss
@@ -1,21 +1,20 @@
-
 h1 {
-  color: tomato;
+  color: #161617;
 }
 
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,700");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css");
 
 body {
-     background: white;
-     color: black;
+     background: #313131;
+     color: white;
      font-family: 'Open Sans', sans-serif;
      font-size: 14px;
      margin: 70px 0;
    }
 
    .chatbar {
-     background: tomato;
+     background: #161617;
      border-top: 1px solid black;
      bottom: 0;
      display: flex;
@@ -27,6 +26,7 @@ body {
 
    .chatbar-message,
    .chatbar-username {
+     border-radius: 4px;
      border: 1px solid black;
      display: block;
      height: 40px;
@@ -41,6 +41,17 @@ body {
 
    .chatbar-username {
      flex: 2;
+   }
+
+   .send {
+     background-color: #d00303;
+     color: inherit;
+     border-radius: 33%;
+     font-weight: bold;
+   }
+
+   .send:hover {
+     cursor: pointer;
    }
 
    .message {
@@ -69,8 +80,12 @@ body {
      font-weight: 700;
    }
 
+   .system {
+     color: #3434c3;
+   }
+
    .navbar {
-     background: tomato;
+     background: #161617;
      border-bottom: 1px solid black;
      height: 60px;
      left: 0;
